# varity-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_ISSUES.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
cli/: .gitignore  EXECUTE_DAY_1.sh  KNOWN_ISSUES.md  LICENSE  MANUAL_FIX_GUIDE.md  MVP_LAUNCH_IMPLEMENTATION_PLAN.md  MVP_PROGRESS_TRACKER.md  README.md  README_MVP_LAUNCH.md  RUN_FIXES.sh  SECURITY_FIXES.md  TEST_COVERAGE_PLAN.md  coverage.json  fix_types_and_lint.py  pyproject.toml  setup_dev.sh  test_installation.sh  test_phase3_credentials.py
cli/contracts/: .env.example  .gitignore  README.md  TemplateMarketplace.sol  TemplateRegistry.sol  hardhat.config.js  package-lock.json  package.json
cli/contracts/scripts/: deploy.js  test-marketplace.js
cli/contracts/src/: TemplateMarketplace.sol  TemplateRegistry.sol
cli/docs/: AI_ENGINE.md  AKASH_DEPLOYMENT.md  APP_DEPLOY.md  APP_STORE_SUBMISSION.md  CLI_THIRDWEB_COMMANDS.md  DEVELOPER_QUICK_START.md  MIGRATION_THIRDWEB.md  README.md
cli/localdepin/: .gitignore  QUICK_REFERENCE.md  README.md  docker-compose.yml
cli/localdepin/config/: arbitrum.json  celestia.json  init.sql  network.env  network.env.example  test-accounts.json
cli/localdepin/docs/: ARCHITECTURE.md  TROUBLESHOOTING.md
cli/localdepin/scripts/: healthcheck.sh  logs.sh  reset.sh  start.sh  status.sh  stop.sh
cli/localdepin/services/akash-simulator/: Dockerfile  package.json
cli/localdepin/services/akash-simulator/src/: index.ts
cli/localdepin/services/pinata-mock/: .dockerignore  Dockerfile  package.json
cli/localdepin/services/pinata-mock/src/: index.ts
cli/localdepin/tests/: test_api_server.sh  test_arbitrum_node.sh  test_end_to_end.sh  test_ipfs_node.sh
cli/scripts/: README.md  TEST_INTEGRATION.md  generate_comprehensive_tests.py  health-check.sh  package-lock.json  package.json  test_mock.sh  upload_to_ipfs.js
cli/scripts/thirdweb/: deploy.js  download.js  package.json  read.js  upload.js  write.js
cli/templates/akash/: backend.sdl.yaml  frontend.sdl.yaml
cli/templates/varity-finance-template/: .varietykit.toml  copier.yaml
cli/templates/varity-finance-template/template_content/: .env.template  README.md.jinja
cli/templates/varity-finance-template/template_content/frontend/: package.json.jinja  tailwind.config.js  vite.config.ts
cli/tests/: __init__.py  conftest.py  test_app_deploy_command.py  test_ipfs_uploader.py
cli/tests/contracts/: TemplateMarketplace.test.js
cli/tests/fixtures/simple-site/: app.js  index.html  styles.css
cli/tests/integration/: __init__.py  test_template_workflow.py
cli/tests/migrate/: test_codemods_fixture.py
cli/tests/onboarding/: developer_onboarding_test.py
cli/tests/unit/: __init__.py  test_ai_engine.py  test_ai_init.py  test_akash_deploy_result_compat.py  test_akash_deployer.py  test_app_store_client.py  test_bootstrap.py  test_config.py  test_deployment_history.py  test_deployment_orchestrator.py  test_dev.py  test_doctor.py  test_fund.py  test_init.py  test_install_deps.py  test_marketplace.py  test_telemetry.py  test_template_generator.py  test_templates.py  test_templates_saas_scaffold.py  test_validators.py
cli/varietykit/: __init__.py
cli/varietykit/cli/: completions.py  contract.py  deploy.py  doctor.py  fund.py  init.py  main.py  marketing.py  migrate.py  task.py  template.py  thirdweb.py
cli/varietykit/commands/: __init__.py  app_deploy.py
cli/varietykit/config/: local.yaml
cli/varietykit/core/: ai_engine.py  build_manager.py  config.py  deployment_history.py  deployment_orchestrator.py  deployment_tracker.py  gas_estimator.py  sdk_config.py  sdk_wrapper.py  types.py
cli/varietykit/core/akash/: __init__.py  manifest_generator.py  types.py
cli/varietykit/core/app_store/: __init__.py  types.py
cli/varietykit/tests/: __init__.py
cli/varietykit/utils/: __init__.py
cli/varitykit/: __init__.py  __main__.py
cli/varitykit/cli/: __init__.py  ai_init.py  auth.py  bootstrap.py  completions.py  contract.py  deploy.py  dev.py  doctor.py  domains.py  fund.py  init.py  install_deps.py  localdepin.py  localnet.py  main.py  marketing.py  marketplace.py  migrate.py  task.py  template.py  thirdweb.py
cli/varitykit/commands/: app_deploy.py  chains.py
cli/varitykit/config/: mainnet.yaml  testnet.yaml
cli/varitykit/core/: AGENT3_SUMMARY.md  DAY_1_COMPLETION_REPORT.md  INTEGRATION_GUIDE.md  README.md  __init__.py  build_manager.py  config.py  contract_verifier.py  credential_fetcher.py  deployment_history.py  deployment_orchestrator.py  deployment_tracker.py  ipfs_uploader.py  learned_recommender.py  path_rewriter.py  project_detector.py  sdk_config.py  template_generator.py  templates.py  types.py
cli/varitykit/core/akash/: __init__.py  akash_deployer.py  console_deployer.py  manifest_generator.py  provider_selector.py
cli/varitykit/core/app_store/: __init__.py  client.py  metadata_builder.py  types.py
cli/varitykit/migrate/: __init__.py  codemods.py  detector.py
cli/varitykit/scripts/: __init__.py
cli/varitykit/services/: __init__.py  akash_deploy_service.py  credential_fetcher.py  credentials.py  gateway_client.py
cli/varitykit/templates/github-actions/: varity-deploy.yml
cli/varitykit/templates/saas-starter/: package.json  varity.config.json
cli/varitykit/templates/saas-starter/app/: globals.css  page.tsx
cli/varitykit/tests/: test_akash_sdl.py  test_app_info_jargon.py  test_basepath_injection.py  test_build_manager.py  test_deploy_error_handling.py  test_deploy_jargon.py  test_env_passthrough.py  test_ghost_deploy_record.py  test_health_check.py  test_learned_recommender.py  test_orchestrator_akash_wiring.py  test_path_rewriter_static_hosting.py  test_pgvector_postgres.py  test_prebuilt_push.py  test_project_detector.py  test_qwik_detection.py  test_service_detection.py  test_skip_build_domain_registration.py  test_template_context.py  test_vercel_migrate.py
cli/varitykit/utils/: __init__.py  badge_generator.py  code_analyzer.py  logger.py  validators.py
(+1872 files in other folders)
